<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">App01</string>
    <string name="hellow">Hellow, man!</string>
    <string name="registration">Registration</string>
    <string name="exit">Exit</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="birthday">Birthday</string>
    <string name="city">City</string>
    <string name="hobby">Hobby</string>
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year_array">
        <item>1980</item>
        <item>1990</item>
        <item>2000</item>
    </string-array>
    <string-array name="city_array">
        <item>Moscow</item>
        <item>Saint-Petersbourg</item>
        <item>Chicago</item>
    </string-array>
    <string name="programming">programming</string>
    <string name="football">football</string>
    <string name="mathematica">mathematica</string>
    <string name="chess">chess</string>

</resources>
